# distributed-auction-system-main

./: README.md  pyproject.toml  tox.ini
auction_system/: example.py  main.py
auction_system/client/: home.py
auction_system/client/components/: connections.py  states.py
auction_system/server/: main.py
auction_system/server/database/: __init__.py  models.py  schemas.py
auction_system/server/remote_objects/: auctions_bids.py  authenticator.py
auction_system/utils/: constants.py
scripts/: run-client.sh  run-linters.sh  run-server.sh  run-tests.sh
